# -RDX-X5-

./: .gitattributes  .gitignore  README.md  README_cn.md
colcon_workspace/src/handfather/leapsim/: deploy.py  grasp.sh  headture.sh  launch.sh  onnx.py  quick_palm_test.py  test.sh  test_is.py  urdf.sh  urdf_palm_adjuster.py
colcon_workspace/src/handfather/leapsim/cache/: data.py  datainsert.py  random_joint_values.py  test.py
colcon_workspace/src/handfather/leapsim/cfg/: config.yaml
colcon_workspace/src/handfather/leapsim/learning/: amp_continuous.py  amp_datasets.py  amp_models.py  amp_network_builder.py  amp_players.py  common_agent.py  common_player.py  hrl_models.py  replay_buffer.py
colcon_workspace/src/handfather/leapsim/scripts/: gen_grasp.sh
colcon_workspace/src/handfather/leapsim/tasks/: __init__.py  leap_hand_catch.py  leap_hand_grasp.py  leap_hand_hello.py  leap_hand_mask.py  leap_hand_rot_pack.py
colcon_workspace/src/handfather/leapsim/utils/: reformat.py  rlgames_utils.py  torch_jit_utils.py  utils.py
colcon_workspace/src/open_manipulator/open_manipulator_x_description/: launch_isaac.py
sound_module/: .gitignore  final_kws.py
sound_module/QuickStart_Terminal_Demo/src/: main.cc
yolo_and_camera/src/yolo_object_detector/: package.xml  setup.py
yolo_and_camera/src/yolo_object_detector/launch/: run_full_system.launch.py
yolo_and_camera/src/yolo_object_detector/yolo_object_detector/: pointcloud_grasp_planner.py  task_coordinator_node.py  ultimate_yolo_node.py  websocket_bridge_node.py
(+11 files in other folders)
